--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Website Konsultasi Mental Untuk Remaja",
   "main": "webpack.common.js",
   "scripts": {
-    "start": "webpack serve --config webpack.dev.js",
+    "start-dev": "webpack serve --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
     "serve": "http-server dist",
     "start-server": "nodemon server.js"
